<resources>
	<string name="app_name">Estate Agency</string>

	<string name="title_property">%s</string>
	<string name="msg_property_image_desc">Image of the property</string>
	<string name="msg_property_price">%d €</string>
	<string name="msg_property_location">%s</string>
	<string name="msg_property_infosTitle">Informations</string>
	<string name="msg_property_roomTitle">Nombre de pièces</string>
	<string name="msg_property_room">%d</string>
	<string name="msg_property_featuresTitle">Caractéristiques</string>
	<string name="msg_property_features">%s</string>
	<string name="msg_property_descriptionTitle">Description</string>
	<string name="msg_property_description">%s</string>
	<string name="msg_property_publication_date">Published the %s</string>
	<string name="msg_property_sellerTitle">Vendeur</string>
	<string name="msg_property_seller_name">%s</string>

	<string name="action_add_property">Add a new property</string>
	<string name="action_search">Search</string>
	<string name="action_save">Save</string>
	<string name="action_call">Call</string>
	<string name="action_mail">Mail</string>

	<string name="nav_saved_properties">Saved properties</string>
	<string name="nav_profile">Profile</string>

	<string name="profile_image_desc">Account icon</string>
	<string name="profile_creation_lastname">Lastname</string>
	<string name="profile_creation_firstname">Firstname</string>
	<string name="profile_creation_email">Email address</string>
	<string name="profile_creation_phone">Phone number</string>
	<string name="action_profile_validate">Validate</string>
	<string name="action_profile_edit">Edit</string>

	<string name="profile_infos_lastame">Lastname:</string>
	<string name="profile_infos_firstname">Firstname:</string>
	<string name="profile_infos_email">Mail address:</string>
	<string name="profile_infos_phone">Phone number:</string>

	<string name="profile_infos_lastname_value">%s</string>
	<string name="profile_infos_firstname_value">%s</string>
	<string name="profile_infos_email_value">%s</string>
	<string name="profile_infos_phone_value">%s</string>
</resources>
