<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
		android:layout_height="match_parent">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		android:layout_marginEnd="8dp"
		android:layout_marginBottom="8dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<ImageView
			android:id="@+id/img_profile_create"
			android:layout_width="300dp"
			android:layout_height="300dp"
			android:contentDescription="@string/profile_image_desc"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:srcCompat="@drawable/ic_account_circle" />

		<TextView
			android:id="@+id/text_profile_infos_lastname"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="64dp"
			android:text="@string/profile_infos_lastame"
			android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
			app:layout_constraintEnd_toEndOf="@+id/img_profile_create"
			app:layout_constraintStart_toStartOf="@+id/img_profile_create"
			app:layout_constraintTop_toBottomOf="@+id/img_profile_create" />

		<TextView
			android:id="@+id/text_profile_infos_lastname_value"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:text="@string/profile_infos_lastname_value"
			android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
			android:textSize="14sp"
			app:layout_constraintEnd_toEndOf="@+id/text_profile_infos_lastname"
			app:layout_constraintStart_toStartOf="@+id/text_profile_infos_lastname"
			app:layout_constraintTop_toBottomOf="@+id/text_profile_infos_lastname" />

		<TextView
			android:id="@+id/text_profile_infos_firstname"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:text="@string/profile_infos_firstname"
			android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/text_profile_infos_lastname_value" />

		<TextView
			android:id="@+id/text_profile_infos_firstname_value"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:text="@string/profile_infos_firstname_value"
			android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
			android:textSize="14sp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/text_profile_infos_firstname" />

		<TextView
			android:id="@+id/text_profile_infos_email"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:text="@string/profile_infos_email"
			android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
			app:layout_constraintEnd_toEndOf="@+id/img_profile_create"
			app:layout_constraintHorizontal_bias="0.0"
			app:layout_constraintStart_toStartOf="@+id/img_profile_create"
			app:layout_constraintTop_toBottomOf="@+id/text_profile_infos_firstname_value" />

		<TextView
			android:id="@+id/text_profile_infos_email_value"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:text="@string/profile_infos_email_value"
			android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
			android:textSize="14sp"
			app:layout_constraintEnd_toEndOf="@+id/text_profile_infos_email"
			app:layout_constraintStart_toStartOf="@+id/text_profile_infos_email"
			app:layout_constraintTop_toBottomOf="@+id/text_profile_infos_email" />

		<TextView
			android:id="@+id/text_profile_infos_phone"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:text="@string/profile_infos_phone"
			android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
			app:layout_constraintEnd_toEndOf="@+id/img_profile_create"
			app:layout_constraintStart_toStartOf="@+id/img_profile_create"
			app:layout_constraintTop_toBottomOf="@+id/text_profile_infos_email_value" />

		<TextView
			android:id="@+id/text_profile_infos_phone_value"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:text="@string/profile_infos_email_value"
			android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
			android:textSize="14sp"
			app:layout_constraintEnd_toEndOf="@+id/text_profile_infos_phone"
			app:layout_constraintStart_toStartOf="@+id/text_profile_infos_phone"
			app:layout_constraintTop_toBottomOf="@+id/text_profile_infos_phone" />
	</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>