<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
			xmlns:app="http://schemas.android.com/apk/res-auto"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:fillViewport="true"
			android:id="@+id/layout_property">

	<LinearLayout
			android:id="@+id/linearLayout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

		<androidx.constraintlayout.widget.ConstraintLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent">

			<androidx.viewpager.widget.ViewPager
					android:layout_width="0dp"
					android:layout_height="250dp"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintTop_toTopOf="parent"
					android:id="@+id/viewPager_property_slider"/>

			<com.rd.PageIndicatorView
					android:id="@+id/pageIndicatorView_property_slider"
					app:piv_viewPager="@id/viewPager_property_slider"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginBottom="8dp"
					app:layout_constraintBottom_toBottomOf="@+id/viewPager_property_slider"
					app:layout_constraintEnd_toEndOf="parent"
					android:layout_marginEnd="8dp"
					app:layout_constraintStart_toStartOf="parent"
					android:layout_marginStart="8dp"
					app:piv_padding="12dp"
					app:piv_radius="6dp"
					app:piv_animationType="worm"/>

			<TextView
					android:id="@+id/text_property_title"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:text="@string/title_property"
					android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
					android:textStyle="bold"
					android:layout_marginTop="8dp"
					app:layout_constraintTop_toBottomOf="@+id/viewPager_property_slider"
					app:layout_constraintStart_toStartOf="parent"
					android:layout_marginStart="16dp"
			/>

			<TextView
					android:id="@+id/text_property_price"
					android:layout_height="24dp"
					android:text="@string/msg_property_price"
					android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
					android:textColor="@color/colorPrimary"
					android:textSize="18sp"
					android:layout_width="0dp"
					android:layout_marginTop="8dp"
					app:layout_constraintTop_toBottomOf="@+id/text_property_title"
					app:layout_constraintStart_toStartOf="parent"
					android:layout_marginStart="16dp"
					android:layout_marginBottom="16dp"
					app:layout_constraintBottom_toTopOf="@+id/text_property_location"
			/>

			<TextView
					android:id="@+id/text_property_location"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_marginStart="16dp"
					android:text="@string/msg_property_location"
					app:layout_constraintStart_toStartOf="parent"
					android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
					app:layout_constraintTop_toBottomOf="@+id/text_property_price"
					android:layout_marginTop="16dp"
					app:layout_constraintEnd_toEndOf="parent"
					android:layout_marginEnd="16dp"/>
			<TextView
					android:id="@+id/text_property_publication_date"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:text="@string/msg_property_publication_date"
					android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
					android:layout_marginTop="8dp"
					app:layout_constraintTop_toBottomOf="@+id/text_property_location"
					app:layout_constraintStart_toStartOf="parent"
					android:layout_marginStart="16dp"
					app:layout_constraintEnd_toEndOf="parent"
					android:layout_marginEnd="16dp"/>
			<TextView
					android:id="@+id/text_property_descriptionTitle"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:text="@string/msg_property_descriptionTitle"
					android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
					app:layout_constraintTop_toBottomOf="@+id/text_property_publication_date"
					android:layout_marginTop="16dp"
					app:layout_constraintStart_toStartOf="parent"
					android:layout_marginStart="16dp"
					app:layout_constraintEnd_toEndOf="parent"
					android:layout_marginEnd="16dp"/>
			<TextView
					android:id="@+id/text_property_description"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_marginStart="16dp"
					android:layout_marginTop="8dp"
					android:layout_marginEnd="16dp"
					android:text="@string/msg_property_description"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toBottomOf="@+id/text_property_descriptionTitle"
					android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
					android:layout_marginBottom="8dp"
					app:layout_constraintBottom_toTopOf="@+id/text_property_sellerTitle"
					app:layout_constraintVertical_bias="0.0"/>
			<TextView
					android:text="@string/msg_property_sellerTitle"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:id="@+id/text_property_sellerTitle"
					android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
					android:layout_marginBottom="8dp"
					app:layout_constraintBottom_toTopOf="@+id/text_property_seller_name"
					app:layout_constraintStart_toStartOf="parent"
					android:layout_marginStart="16dp"
					app:layout_constraintEnd_toEndOf="parent"
					android:layout_marginEnd="16dp"/>
			<TextView
					android:id="@+id/text_property_seller_name"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:text="@string/msg_property_seller_name"
					android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
					android:layout_marginBottom="8dp"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					android:layout_marginStart="16dp"
					app:layout_constraintEnd_toEndOf="parent"
					android:layout_marginEnd="16dp"/>

		</androidx.constraintlayout.widget.ConstraintLayout>

	</LinearLayout>
</ScrollView>