<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:fillViewport="true"
	tools:context=".PropertyActivity">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<android.support.constraint.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<TextView
				android:id="@+id/text_property_title"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="8dp"
				android:layout_marginTop="8dp"
				android:layout_marginEnd="6dp"
				android:text="@string/title_property"
				android:textAppearance="@style/TextAppearance.AppCompat.Title"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent" />

			<ImageView
				android:id="@+id/image_property"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="8dp"
				android:layout_marginTop="8dp"
				android:layout_marginEnd="8dp"
				android:contentDescription="@string/msg_property_description"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/text_property_title"
				app:srcCompat="@drawable/house" />
		</android.support.constraint.ConstraintLayout>

		<android.support.constraint.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<TextView
				android:id="@+id/text_property_price"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="8dp"
				android:layout_marginTop="8dp"
				android:text="@string/msg_property_price"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent" />

			<TextView
				android:id="@+id/text_property_location"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="8dp"
				android:layout_marginEnd="8dp"
				android:text="@string/msg_property_location"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintTop_toTopOf="parent" />
		</android.support.constraint.ConstraintLayout>

		<android.support.constraint.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="1">

			<TextView
				android:id="@+id/text_property_description"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="8dp"
				android:layout_marginTop="8dp"
				android:text="@string/msg_property_description"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent" />

		</android.support.constraint.ConstraintLayout>

		<android.support.constraint.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<TextView
				android:id="@+id/text_property_publication_date"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="8dp"
				android:layout_marginTop="8dp"
				android:text="@string/msg_property_publication_date"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent" />

			<TextView
				android:id="@+id/text_property_seller_name"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="8dp"
				android:layout_marginTop="8dp"
				android:text="@string/msg_property_seller_name"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/text_property_publication_date" />

			<TextView
				android:id="@+id/text_property_seller_mail"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="8dp"
				android:text="@string/msg_property_seller_mail"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/text_property_seller_name" />

			<TextView
				android:id="@+id/text_property_seller_number"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="8dp"
				android:layout_marginBottom="8dp"
				android:text="@string/msg_property_seller_number"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/text_property_seller_mail" />
		</android.support.constraint.ConstraintLayout>

	</LinearLayout>
</ScrollView>
