<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

	<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			app:layout_constraintEnd_toEndOf="parent"
			android:layout_marginEnd="8dp"
			app:layout_constraintStart_toStartOf="parent"
			android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
			app:layout_constraintBottom_toBottomOf="parent"
			android:layout_marginTop="8dp"
			app:layout_constraintTop_toTopOf="parent">

		<ImageView
				android:layout_width="300dp"
				android:layout_height="300dp"
				app:srcCompat="@drawable/ic_account_circle"
				android:id="@+id/img_profile_create"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				android:contentDescription="@string/profile_image_desc"/>

		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/input_layout_profile_creation_lastname"
			style="@style/ThemeOverlay.MaterialComponents.TextInputEditText.OutlinedBox"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="64dp"
			android:layout_marginEnd="8dp"
			android:hint="@string/profile_creation_lastname"
			app:boxStrokeColor="@color/colorPrimary"
			app:layout_constraintEnd_toStartOf="@+id/guideline"
			app:layout_constraintStart_toStartOf="@+id/img_profile_create"
			app:layout_constraintTop_toBottomOf="@+id/img_profile_create">

			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/input_edit_profile_create_lastname"
				android:layout_width="match_parent"
				android:layout_height="wrap_content" />
		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/input_layout_profile_creation_firstname"
			style="@style/ThemeOverlay.MaterialComponents.TextInputEditText.OutlinedBox"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:layout_marginTop="64dp"
			android:hint="@string/profile_creation_firstname"
			app:boxStrokeColor="@color/colorPrimary"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="@+id/guideline"
			app:layout_constraintTop_toBottomOf="@+id/img_profile_create">

			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/input_edit_profile_create_firstname"
				android:layout_width="match_parent"
				android:layout_height="wrap_content" />
		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.textfield.TextInputLayout
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				style="@style/ThemeOverlay.MaterialComponents.TextInputEditText.OutlinedBox"
				android:hint="@string/profile_creation_email"
				app:layout_constraintTop_toBottomOf="@+id/input_layout_profile_creation_lastname"
				app:layout_constraintStart_toStartOf="@+id/img_profile_create"
				app:layout_constraintEnd_toEndOf="@+id/img_profile_create"
				android:layout_marginTop="16dp"
				android:id="@+id/input_layout_profile_creation_email"
				app:boxStrokeColor="@color/colorPrimary">

			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/input_edit_profile_creation_email"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="textEmailAddress" />
		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/input_layout_profile_creation_phone"
			style="@style/ThemeOverlay.MaterialComponents.TextInputEditText.OutlinedBox"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="16dp"
			android:hint="@string/profile_creation_phone"
			app:boxStrokeColor="@color/colorPrimary"
			app:layout_constraintEnd_toEndOf="@+id/img_profile_create"
			app:layout_constraintStart_toStartOf="@+id/img_profile_create"
			app:layout_constraintTop_toBottomOf="@+id/input_layout_profile_creation_email">

			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/input_edit_profile_creation_phone"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="phone" />
		</com.google.android.material.textfield.TextInputLayout>

		<androidx.constraintlayout.widget.Guideline
			android:id="@+id/guideline"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintGuide_begin="145dp"
			app:layout_constraintStart_toStartOf="parent" />
	</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>